# portfolio

./: .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.prod  README.md  constraints.txt  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json  pip-compile.sh  pyproject.toml  requirements.dev.txt  requirements.txt  webpack.config.js
.github/workflows/: deploy.yml  test.yml
api/: serializers.py  urls.py  views.py
api/tests/: test_api.py
assets/: base.scss  index.js
cafe/: apps.py
core/utils/: middleware.py  turnstile_utils.py
home/: admin.py  auth_backends.py  context_processors.py  models.py  urls.py  views.py
home/migrations/: 0001_initial.py  0002_project_project_url.py  0003_project_date.py  0004_auto_20201111_2201.py  0005_auto_20201112_0313.py  0006_achievement_blogpost_hidden_project_hidden_and_more.py  0012_certification_education.py  0014_certification_cert_level_certification_cert_name_and_more.py  0015_project_image_url_alter_project_project_board_url_and_more.py  0016_blogpost_preview_text_alter_blogpost_post_body.py  0017_experience.py  0018_blogpost_slug.py  0019_tag_blogpost_tags_certification_tags_education_tags_and_more.py  0020_oidcprofile.py  0021_alter_oidcprofile_id.py  0022_oidcprofile_iss_alter_oidcprofile_sub_and_more.py  0023_blogpost_pinned_project_pinned.py  0024_delete_oidcprofile.py  0025_training.py
home/tests/: test_models.py
polls/: admin.py  models.py  views.py
polls/migrations/: 0001_initial.py
portfolio/: .dockerignore  Dockerfile  Dockerfile.prod  admin.py  apps.py  package-lock.json  package.json  requirements.txt  settings.py  urls.py  webpack.config.js  wsgi.py
portfolio/assets/: base.scss  portfolio.scss
portfolio/home/: admin.py  models.py  urls.py  views.py
sponsors/: admin.py  models.py  serializers.py  urls.py  views.py
templates/: base.html
users/: admin.py  auth_backends.py  context_processors.py  models.py  views.py
(+57 files in other folders)
