[project]
name = "portfolio"
version = "2025.12"
readme = "README.md"
requires-python = ">=3.14.2"
authors = [
    {name = "Bryan Grigorie", email = "bryangrigorie@gmail.com"},
]

dependencies = [
    "Django==6.0.2",
    "python-decouple==3.8",
    "Pillow==12.0.0",
    "django-tinymce==5.0.0",
    "gunicorn==23.0.0",
    "beautifulsoup4==4.14.3",
    "mozilla-django-oidc >= 5.0.2",
    "djangorestframework==3.16.1",
    "django-axes[ipware]==8.0.0",
    "django-constance==4.3.4",
]

[project.optional-dependencies]
dev = [
    "pip-tools >= 7.5.2",
    "wheel >= 0.46.2",
    "ruff",
]
