[project]
name = "portfolio"
version = "2025.12"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    {name = "Bryan Grigorie", email = "bryangrigorie@gmail.com"},
]

dependencies = [
    "django>=6.0.3",
    "python-decouple==3.8",
    "Pillow==12.1.1",
    "django-tinymce==5.0.0",
    "gunicorn==23.0.0",
    "beautifulsoup4==4.14.3",
    "mozilla-django-oidc >= 5.0.2",
    "djangorestframework==3.16.1",
    "django-axes[ipware]==8.0.0",
    "django-constance==4.3.4",
]

[dependency-groups]
lint = [
    "ruff",
]
dev = [
    {include-group = "lint"},
]

[tool.uv]
constraint-dependencies = [
    "cryptography>=46.0.5",
    "sqlparse>=0.5.4",
]
